# abs-haskell-formal

./: .gitignore  .travis.yml  ABS.html  Base.html  Debug.html  Eval.html  LICENSE  README.md  Sched.html  abs-haskell-formal.cabal  abs-haskell-formal.haddock  doc-index.html  index-frames.html  index.html  mini_ABS.html  mini_Base.html  mini_Debug.html  mini_Eval.html  mini_Sched.html
benchmarks/1_integer_part_logarithm/: Logarithm.abs  logarithm_5000.hs
benchmarks/1_integer_part_logarithm/progs/: 1000.hs  1500.hs  2000.hs  2500.hs  3000.hs  3500.hs  4000.hs  4500.hs  500.hs  5000.hs
benchmarks/2_primality_test/: Sample.abs  primality_5000.hs
benchmarks/2_primality_test/progs/: 1000.hs  1500.hs  2000.hs  2500.hs  3000.hs  3500.hs  4000.hs  4500.hs  500.hs  5000.hs
benchmarks/3_primality_test_parallel/: PrimalityParallel.abs
benchmarks/3_primality_test_parallel/progs/: 1000.hs  1500.hs  2000.hs  2500.hs  3000.hs  3500.hs  4000.hs  4500.hs  500.hs  5000.hs
benchmarks/4_logarithms_range/: LogarithmRange.abs
benchmarks/4_logarithms_range/progs/: 1000.hs  1500.hs  2000.hs  2500.hs  3000.hs  3500.hs  4000.hs  4500.hs  500.hs  5000.hs
benchmarks/5_primes_range/: PrimesRange.abs  primes_range_5000.hs
benchmarks/5_primes_range/progs/: 1000.hs  1500.hs  2000.hs  2500.hs  3000.hs  3500.hs  4000.hs  4500.hs  500.hs  5000.hs
benchmarks/6_hanoi/: Hanoi.abs
benchmarks/6_hanoi/progs/: 10.hs  12.hs  14.hs  16.hs  18.hs  2.hs  20.hs  4.hs  6.hs  8.hs
benchmarks/await/: AwaitLinear.hs  bench.py
benchmarks/exponential/: Exp.hs
benchmarks/linear_high/: bench.py
benchmarks/linear_high/programs/: 10.abs  10.hs  100.abs  100.hs  15.abs  15.hs  20.abs  20.hs  25.abs  25.hs  30.abs  30.hs  35.abs  35.hs  40.abs  40.hs  45.abs  45.hs  5.abs  5.hs  50.abs  50.hs  55.abs  55.hs  60.abs  60.hs  65.abs  65.hs  70.abs  70.hs  75.abs  75.hs  80.abs  80.hs  85.abs  85.hs  90.abs  90.hs  95.abs  95.hs
benchmarks/linear_low/: bench.py
benchmarks/linear_low/programs/: 10.abs  10.hs  100.abs  100.hs  15.abs  15.hs  20.abs  20.hs  25.abs  25.hs  30.abs  30.hs  35.abs  35.hs  40.abs  40.hs  45.abs  45.hs  5.abs  5.hs  50.abs  50.hs  55.abs  55.hs  60.abs  60.hs  65.abs  65.hs  70.abs  70.hs  75.abs  75.hs  80.abs  80.hs  85.abs  85.hs  90.abs  90.hs  95.abs  95.hs
benchmarks/linearithmic/programs/: 10.abs  10.hs  100.abs  100.hs  15.abs  15.hs  20.abs  20.hs  25.abs  25.hs  30.abs  30.hs  35.abs  35.hs  40.abs  40.hs  45.abs  45.hs  5.abs  5.hs  50.abs  50.hs  55.abs  55.hs  60.abs  60.hs  65.abs  65.hs  70.abs  70.hs  75.abs  75.hs  80.abs  80.hs  85.abs  85.hs  90.abs  90.hs  95.abs  95.hs
benchmarks/n_await_linear/: bench.py
benchmarks/n_exp/: Exp.hs  bench.py
benchmarks/n_logn/: bench.py
benchmarks/n_ring/: Ring.hs
benchmarks/quadratic/: bench.py
benchmarks/quadratic/programs/: 10.abs  10.hs  100.abs  100.hs  15.abs  15.hs  20.abs  20.hs  25.abs  25.hs  30.abs  30.hs  35.abs  35.hs  40.abs  40.hs  45.abs  45.hs  5.abs  5.hs  50.abs  50.hs  55.abs  55.hs  60.abs  60.hs  65.abs  65.hs  70.abs  70.hs  75.abs  75.hs  80.abs  80.hs  85.abs  85.hs  90.abs  90.hs  95.abs  95.hs
benchmarks/ring/: Ring.hs  bench.py
examples/: Ex0.hs  Ex1.hs  Ex2.hs  Ex4.hs  Ex5.hs  Ex6.hs  Example0.hs  Example1.hs  Example3.hs  Example5.hs  ExampleExponential.hs  ExampleFactorial.hs  ExampleLinear.hs  ExampleThreadRing.hs  Exp.hs  Linear.hs  Ring.hs  TestWhile.hs
src/: ABS.hs  Base.hs  Debug.hs  Eval.hs  Q.hs  Sched.hs
